[project]
name = "fastapi-sse-tools"
version = "0.1.0"
description = "FastAPI Server-Sent Events utilities for OpenAPI schema generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi", "pydantic>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_sse_tools"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio",
  "httpx",
  "black",
  "isort",
  "mypy",
  "ruff",
]
